[package]
name = "physics-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
ode_solvers = "0.3.7"
nalgebra = "0.32"

[dev-dependencies]
serde_json = "1.0"
approx = "0.5"
